--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
             <div class="flex justify-center w-full bg-magnolia p-4 mt-4 rounded-lg">
               <!-- Monthly Label -->
-              <p class="text-md font-medium pr-4 text-marine-blue font-semibold">Monthly</p>
+              <p class="text-md font-medium pr-4 text-marine-blue">Monthly</p>
               <!-- Checkbox Slider -->
               <label class="relative inline-flex items-center cursor-pointer">
                 <input type="checkbox" id="billing-toggle" class="sr-only peer">
@@ -174,21 +174,21 @@
          </div>
       
           
-          <div class="card hidden flex flex-col items-center" id="thank-you-card">
-
-            <img src="./assets/images/icon-thank-you.svg" alt="icon-thank-you" class="mt-2 mb-6">
-            <h1 class="text-marine-blue font-bold text-xl mb-4">Thank You!</h1>
-            <p class="text-center text-cool-gray font-semibold">
-              Thanks for confirming your subscription! 
-                We hope you have fun using our platform. If you ever need support, 
-                please feel free to email us at support@loremgaming.com.
-            </p>
+          <div class="card hidden" id="thank-you-card">
+            <div class="flex flex-col items-center">
+              <img src="./assets/images/icon-thank-you.svg" alt="icon-thank-you" class="mt-2 mb-6">
+              <h1 class="text-marine-blue font-bold text-xl mb-4">Thank You!</h1>
+              <p class="text-center text-cool-gray font-semibold">
+                Thanks for confirming your subscription! 
+                  We hope you have fun using our platform. If you ever need support, 
+                  please feel free to email us at support@loremgaming.com.
+              </p>
+            </div>  
           </div>
       </div>  
-        <!-- this is button code -->
         <div class="fixed bottom-0 w-full bg-white p-4" id="footer">
-          <div class="flex justify-end">
-            <button id="go-back-btn" class="bg-light-gray text-black p-2 rounded-md hidden">Go Back</button>
+          <div class="flex justify-end" id="footer-content">
+            <a id="go-back-btn" class="text-cool-gray hidden inline-block pt-2">Go Back</a>
             <button class="bg-marine-blue text-white p-2 rounded-md" id="next-step-btn">Next Step</button>
           </div>
         </div>
