--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </style>
   </head>
   <body>
-    <main class="w-full max-xs:hidden">
-      <div class="w-full bg-sidebar-mobile h-40 p-6 relative">
+    <main class="w-full sm:hidden">
+      <div class="w-full  bg-sidebar-mobile h-40 p-6 relative">
           <div class="flex  flex-row justify-center">
             <div class="w-8 h-8 p-3 bg-light-blue rounded-full m-4 text-center flex justify-center items-center" id="step-1-indicator">1</div>
             <div class="w-8 h-8 p-3 bg-transparent rounded-full m-4 text-center flex justify-center items-center text-white border border-white" id="step-2-indicator">
@@ -172,8 +172,7 @@
                <h2 class="text-marine-blue text-lg font-bold" id="total-cal">$</h2>
             </div>
          </div>
-      
-          
+
           <div class="card hidden" id="thank-you-card">
             <div class="flex flex-col items-center">
               <img src="./assets/images/icon-thank-you.svg" alt="icon-thank-you" class="mt-2 mb-6">
