--- a/index.html
+++ b/index.html
@@ -11,15 +11,6 @@
     />
     <link rel="stylesheet" href="./output.css">
     <title>Multi-step form</title>
-    <style>
-      *{
-        margin: 0;
-      }
-      #thankYou-card {
-            padding: 2rem; /* p-8 */
-         }
-          
-    </style>
   </head>
   <body>
     <main class="w-full large-main">
@@ -68,7 +59,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="w-full">
         <div class="bg-magnolia h-screen flex justify-center p-3 sm:bg-white sm:h-fit sm:p-4 sm:m-5">
             <div class="card w-80 sm:w-full sm:mt-8" id="step-1">
                 <h1 class="font-bold text-xl sm:text-3xl  p-2">Personal Info</h1>
@@ -229,4 +220,3 @@
     <script src="./index.js"></script>
   </body>
 </html>
-
