--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="./assets/images/bg-sidebar-mobile.svg" alt="Mobile Sidebar"
                 class="sm:hidden w-full object-contain">
 
-            <div class="absolute top-4 sm:top-16 flex justify-center sm:flex-col flex-row sm:items-start  px-12  sm:px-10">
+            <div class="absolute top-4 sm:top-16 flex justify-center sm:flex-col flex-row sm:items-start  px-12 ml-4 sm:ml-0 sm:mr-5  sm:px-10">
                 <div class="flex items-center">
                   <div class="w-8 h-8 p-3 bg-light-blue rounded-full m-4 text-center flex justify-center items-center" id="step-1-indicator">1</div>
                     <div class="hidden md:block ml-4 text-left">
